cm_secrets_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: cm-secret-pod

spec:
  containers:
  - name: database
    image: registry.redhat.io/rhel8/mysql-80:1
    ports:
    - containerPort: 3306
      name: db-port
