mypod.yml
apiVersion: v1
kind: Pod
metadata:
  name: claude

spec:
  containers:
  - name: web
    image: quay.io/redhattraining/hello-world-nginx:v1.0
    ports:
    - containerPort: 8080
      name: web-port

  - name: database
    image: registry.redhat.io/rhel8/postgresql-13:1
    ports:
    - containerPort: 5432
      name: db-port
