pvc_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: johnpod

spec:
  containers:
  - name: database
    image: registry.redhat.io/rhel8/mysql-80:1
    ports:
    - containerPort: 3306
    volumeMounts:
    - mountPath: /var/lib/mysql/data
      name: pvstorage
  volumes:
  - name: pvstorage
    persistentVolumeClaim:
      claimName: pvc1
