sa_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: claude

spec:
  serviceAccountName: marc
  containers:
  - name: web
    image: nginx
    ports:
    - containerPort: 80
      name: web-port

  - name: database
    image: registry.redhat.io/rhel8/postgresql-13:1
    ports:
    - containerPort: 5432
      name: db-port
