web-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: web-pv-pod
spec:
  volumes:
    - name: web-pv-storage
      persistentVolumeClaim:
        claimName: web-pvc
  containers:
    - name: web
      image: quay.io/redhattraining/hello-world-nginx:v1.0
      ports:
        - containerPort: 8080
          name: "web-server"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html/"
          name: web-pv-storage
