allow-specific.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-specific
spec:
  podSelector:
    matchLabels:
      deployment: app2
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: project4
        podSelector:
          matchLabels:
            deployment: app4
      ports:
      - port: 8080
        protocol: TCP
