network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: project1
spec:
  podSelector: 
    matchLabels: {}

  policyTypes:
  - Egress
  #- Ingress

  egress:
  - to:
    - podSelector:
        matchLabels:
          deployment: app4
      namespaceSelector:
        matchLabels:
          name: project4

  #ingress:
  #- from:
  #  - podSelector:
  #      matchLabels: {}
  #  - namespaceSelector: {}
